language/move-lang/tests/move_check/expansion/type_arguments_on_field_access.move
module M {
    struct X<T> {}
    struct S { f: X<u64> }
    fun foo() {
        let x = S { f: X{} };
        x.f<u64>;
    }
}
